--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 HTTP_PORT=4000
-SECRET_KEY=f3WPrZ3W+O8X58DnMvKaXUIlVJT6HAXC5xNgtsPApbI=
+SECRET_KEY=
 TYPEORM_DEBUG=false
 
 TYPEORM_CONNECTION=mariadb
-TYPEORM_HOST=db-sa.cjgzazarza2t.sa-east-1.rds.amazonaws.com
-TYPEORM_PORT=3306
-TYPEORM_USERNAME=admin
-TYPEORM_PASSWORD=2Ygzy9X6JQEmew9DsAHdsF3eL9J8HJKmKrUAz
-TYPEORM_DATABASE=db_sa_dev
+TYPEORM_HOST=
+TYPEORM_PORT=
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=
 
 TYPEORM_LOGGING=true
 TYPEORM_SYNCHRONIZE=true
