--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,3 +1,19 @@
+//{
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  //  "version": "0.2.0",
+    //"configurations": [
+//      {
+//        "type": "node",
+//        "request": "attach",
+//        "name": "Debug",
+//        "port": 9229,
+//        "skipFiles": ["<node_internals>/**"],
+//        "preLaunchTask": "npm: start:debug"
+//      }
+//    ]
+//  }
 {
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
@@ -13,5 +29,4 @@
         "preLaunchTask": "npm: start:debug"
       }
     ]
-  }
-  
+}
