--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.18.1",
     "nestjs-typeorm-paginate": "^1.0.3",
     "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.0.3",
     "postgres": "^1.0.2",
@@ -53,6 +54,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
+    "@types/passport-http-bearer": "^1.0.35",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
