--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/websockets": "^7.0.9",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "mariadb": "^2.3.1",
     "mysql": "^2.18.1",
     "nestjs-typeorm-paginate": "^1.0.3",
     "passport": "^0.4.1",
