--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@nestjs/swagger": "^4.5.3",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.9",
+    "aws-sdk": "^2.673.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "guid-typescript": "^1.0.9",
     "mariadb": "^2.3.1",
     "mysql": "^2.18.1",
     "nestjs-typeorm-paginate": "^1.0.3",
@@ -54,7 +56,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.13.5",
     "@types/passport-facebook": "^2.1.9",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
