--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.0.3",
     "postgres": "^1.0.2",
+    "rand-token": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
