fix: index live route

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ TYPEORM_PASSWORD=X7YSm0hqk8cxTD068J88I1oGdHDM3kT68HpzLQKE7Az
 TYPEORM_DATABASE=db_ll_cs_dev
 TYPEORM_LOGGING=true
 NODE_ENV=development
+SENDGRID_API_KEY=
