--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^4.5.3",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.9",
+    "@sendgrid/mail": "^7.1.1",
     "aws-sdk": "^2.673.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
