--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.9",
     "@sendgrid/mail": "^7.1.1",
+    "@types/shortid": "0.0.29",
     "aws-sdk": "^2.673.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "shortid": "^2.2.15",
     "socket.io-client": "^2.3.0",
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24"
